--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,10 +1,15 @@
 server {
     listen 80;
     server_name lu-maid.com;
+    return 301 https://$host$request_uri;
+}
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+server {
+    listen 443 ssl;
+    server_name lu-maid.com;
+
+    ssl_certificate /etc/letsencrypt/live/lu-maid.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
     location / {
         proxy_pass http://web:800;
