--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,6 @@ jobs:
           script: |
             cd /home/project/lu-main-app
             git pull origin main
-            docker-compose down
-            docker-compose up -d --build
+            docker-compose -f docker-compose.prod.yml down
+            docker-compose -f docker-compose.prod.yml up -d --build
+
