--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,9 +1,4 @@
-server {
-    listen 80;
-    server_name lu-maid.com;
-    return 301 https://$host$request_uri;
-}
-
+# โดเมนหลัก
 server {
     listen 443 ssl;
     server_name lu-maid.com;
@@ -12,8 +7,37 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
     location / {
-        proxy_pass http://web:800;
+        proxy_pass http://lu-main-app_web_1:800;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+    }
+}
+
+# ซับโดเมนสำหรับ LISA
+server {
+    listen 443 ssl;
+    server_name lisa.lu-maid.com;
+
+    ssl_certificate /etc/letsencrypt/live/lisa.lu-maid.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/lisa.lu-maid.com/privkey.pem;
+
+    location / {
+        proxy_pass http://lisa_fastapi_1:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
+
+# Redirect HTTP เป็น HTTPS ทั้งสองโดเมน
+server {
+    listen 80;
+    server_name lu-maid.com lisa.lu-maid.com;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
     }
 }
