--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,4 +1,3 @@
-# โดเมนหลัก
 server {
     listen 443 ssl;
     server_name lu-maid.com;
@@ -7,13 +6,12 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
     location / {
-        proxy_pass http://lu-main-app_web_1:800;
+        proxy_pass http://lu-main-app:800;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
 
-# ซับโดเมนสำหรับ LISA
 server {
     listen 443 ssl;
     server_name lisa.lu-maid.com;
@@ -22,11 +20,12 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/lisa.lu-maid.com/privkey.pem;
 
     location / {
-        proxy_pass http://lisa_fastapi_1:8000;
+        proxy_pass http://lisa-fastapi:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+
 
 # Redirect HTTP เป็น HTTPS ทั้งสองโดเมน
 server {
