--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -30,13 +30,13 @@ server {
 # Redirect HTTP เป็น HTTPS ทั้งสองโดเมน
 server {
     listen 80;
-    server_name lu-maid.com lisa.lu-maid.com;
+    server_name lisa.lu-maid.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 404;
     }
 }
