--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -20,7 +20,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/lisa.lu-maid.com/privkey.pem;
 
     location / {
-        proxy_pass http://lisa_fastapi_1:8000;
+        proxy_pass http://lisa-fastapi:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
