--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,6 +12,9 @@ services:
       - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - web
+    networks:
+      - default
+      - lisa-net  
 
   web:
     build: .
