--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -26,11 +26,26 @@ server {
     }
 }
 
+server {
+    listen 443 ssl;
+    server_name nia-stg.lu-maid.com;
 
-# Redirect HTTP เป็น HTTPS ทั้งสองโดเมน
+    ssl_certificate /home/project/nia_sale_back/ssl/cert.pem;
+    ssl_certificate_key /home/project/nia_sale_back/ssl/key.pem;
+
+    location / {
+        proxy_pass http://localhost:50;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# Redirect HTTP เป็น HTTPS ทั้งสามโดเมน
 server {
     listen 80;
-    server_name lu-maid.com lisa.lu-maid.com;
+    server_name lu-maid.com lisa.lu-maid.com nia-stg.lu-maid.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
