--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -12,19 +12,19 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    server_name lisa.lu-maid.com;
+# server {
+#     listen 443 ssl;
+#     server_name lisa.lu-maid.com;
 
-    ssl_certificate /etc/letsencrypt/live/lisa.lu-maid.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/lisa.lu-maid.com/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/lisa.lu-maid.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/lisa.lu-maid.com/privkey.pem;
 
-    location / {
-        proxy_pass http://lisa-fastapi:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-}
+#     location / {
+#         proxy_pass http://lisa-fastapi:8000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#     }
+# }
 
 server {
     listen 443 ssl;
@@ -45,7 +45,7 @@ server {
 # Redirect HTTP เป็น HTTPS ทั้งสามโดเมน
 server {
     listen 80;
-    server_name lu-maid.com lisa.lu-maid.com nia-stg.lu-maid.com;
+    server_name lu-maid.com  nia-stg.lu-maid.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
