--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,3 +36,6 @@ services:
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
+      - ./nginx/conf:/etc/nginx/conf.d
+       - /home/project/nia_sale_back/ssl:/home/project/nia_sale_back/ssl
+    
