--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -30,8 +30,8 @@ server {
     listen 443 ssl;
     server_name nia-stg.lu-maid.com;
 
-    ssl_certificate /home/project/nia_sale_back/ssl/cert.pem;
-    ssl_certificate_key /home/project/nia_sale_back/ssl/key.pem;
+    ssl_certificate     /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     location / {
         proxy_pass http://localhost:50;
