--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,3 @@
-
 services:
   nginx:
     image: nginx:latest
@@ -10,10 +9,9 @@ services:
       - ./nginx/conf:/etc/nginx/conf.d
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
+      - /home/project/nia_sale_back/ssl:/etc/nginx/ssl  # ✅ เพิ่มบรรทัดนี้
     depends_on:
       - web
-
-
 
   web:
     build: .
@@ -38,4 +36,3 @@ services:
       - ./certbot/conf:/etc/letsencrypt
       - ./nginx/conf:/etc/nginx/conf.d
       - /home/project/nia_sale_back/ssl:/etc/nginx/ssl
-    
