--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -12,6 +12,7 @@ server {
     }
 }
 
+# Lisa - commented out
 # server {
 #     listen 443 ssl;
 #     server_name lisa.lu-maid.com;
@@ -34,7 +35,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     location / {
-        proxy_pass http://localhost:50;
+        proxy_pass http://nia_sale_back_backend_1:50;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,10 +43,10 @@ server {
     }
 }
 
-# Redirect HTTP เป็น HTTPS ทั้งสามโดเมน
+# HTTP -> HTTPS redirect
 server {
     listen 80;
-    server_name lu-maid.com  nia-stg.lu-maid.com;
+    server_name lu-maid.com nia-stg.lu-maid.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
