--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -35,7 +35,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     location / {
-        proxy_pass http://nia_sale_back_backend_1:50;
+        proxy_pass http://backend:50;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
