--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -6,26 +6,11 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
     location / {
-        proxy_pass http://lu-main-app:800;
+        proxy_pass http://web:800;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
-
-# Lisa - commented out
-# server {
-#     listen 443 ssl;
-#     server_name lisa.lu-maid.com;
-
-#     ssl_certificate /etc/letsencrypt/live/lisa.lu-maid.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/lisa.lu-maid.com/privkey.pem;
-
-#     location / {
-#         proxy_pass http://lisa-fastapi:8000;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#     }
-# }
 
 server {
     listen 443 ssl;
@@ -43,7 +28,6 @@ server {
     }
 }
 
-# HTTP -> HTTPS redirect
 server {
     listen 80;
     server_name lu-maid.com nia-stg.lu-maid.com;
