--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -2,13 +2,15 @@ server {
     listen 443 ssl;
     server_name lu-maid.com;
 
-    ssl_certificate /etc/letsencrypt/live/lu-maid.com/fullchain.pem;
+    ssl_certificate     /etc/letsencrypt/live/lu-maid.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
     location / {
         proxy_pass http://web:800;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -28,8 +30,7 @@ server {
     }
 }
 
-
-
+# HTTP redirect to HTTPS
 server {
     listen 80;
     server_name lu-maid.com nia-stg.lu-maid.com;
