--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -6,7 +6,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
     location / {
-        proxy_pass http://web:800;
+        proxy_pass http://web:800; # 'web' คือชื่อ service ของ lu-main-app flask app
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -18,11 +18,11 @@ server {
     listen 443 ssl;
     server_name nia-stg.lu-maid.com;
 
-    ssl_certificate     /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_certificate     /etc/nginx/ssl/cert.pem;    # Path ภายใน Nginx container
+    ssl_certificate_key /etc/nginx/ssl/key.pem;     # Path ภายใน Nginx container
 
     location / {
-        proxy_pass http://backend:50;
+        proxy_pass http://backend:50; # 'backend' คือชื่อ service ของ nia_sale_back app
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,6 +35,7 @@ server {
     listen 80;
     server_name lu-maid.com nia-stg.lu-maid.com;
 
+    # สำหรับ Let's Encrypt renewal
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
