--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,3 +1,4 @@
+# Server block สำหรับ lu-maid.com (ควรจะใช้ certificate เดียวกัน)
 server {
     listen 443 ssl;
     server_name lu-maid.com;
@@ -5,8 +6,13 @@ server {
     ssl_certificate     /etc/letsencrypt/live/lu-maid.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
+    # (แนะนำ) เพิ่มหาก Certbot สร้างไว้ให้
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
     location / {
-        proxy_pass http://web:800; # 'web' คือชื่อ service ของ lu-main-app flask app
+        proxy_pass http://web:800; # 'web' คือชื่อ service ของ lu-main-app
+        # ... proxy_set_header อื่นๆ ...
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,15 +20,22 @@ server {
     }
 }
 
+# Server block สำหรับ nia-stg.lu-maid.com (แก้ไขส่วน certificate)
 server {
     listen 443 ssl;
     server_name nia-stg.lu-maid.com;
 
-    ssl_certificate     /etc/nginx/ssl/cert.pem;    # Path ภายใน Nginx container
-    ssl_certificate_key /etc/nginx/ssl/key.pem;     # Path ภายใน Nginx container
+    # เปลี่ยนมาใช้ Certificate ของ Let's Encrypt ชุดเดียวกับ lu-maid.com
+    ssl_certificate     /etc/letsencrypt/live/lu-maid.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
+
+    # (แนะนำ) เพิ่มหาก Certbot สร้างไว้ให้ (ควรจะเหมือนกับ block ด้านบน)
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://backend:50; # 'backend' คือชื่อ service ของ nia_sale_back app
+        proxy_pass http://backend:50; # 'backend' คือชื่อ service ของ nia_sale_back
+        # ... proxy_set_header อื่นๆ ...
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -30,12 +43,11 @@ server {
     }
 }
 
-# HTTP redirect to HTTPS
+# HTTP to HTTPS redirect (ไม่ต้องแก้ไขส่วนนี้)
 server {
     listen 80;
     server_name lu-maid.com nia-stg.lu-maid.com;
 
-    # สำหรับ Let's Encrypt renewal
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
