--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -20,22 +20,21 @@ server {
     }
 }
 
-# Server block สำหรับ nia-stg.lu-maid.com (แก้ไขส่วน certificate)
+# Server block สำหรับ nia-stg.lu-maid.com
 server {
     listen 443 ssl;
     server_name nia-stg.lu-maid.com;
 
-    # เปลี่ยนมาใช้ Certificate ของ Let's Encrypt ชุดเดียวกับ lu-maid.com
+    # แก้ไขให้ใช้ Certificate ของ Let's Encrypt ชุดเดียวกับ lu-maid.com
     ssl_certificate     /etc/letsencrypt/live/lu-maid.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/lu-maid.com/privkey.pem;
 
-    # (แนะนำ) เพิ่มหาก Certbot สร้างไว้ให้ (ควรจะเหมือนกับ block ด้านบน)
+    # (แนะนำ) เพิ่มหาก Certbot สร้างไว้ให้ (ควรจะเหมือนกับ block ของ lu-maid.com)
     # include /etc/letsencrypt/options-ssl-nginx.conf;
     # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://backend:50; # 'backend' คือชื่อ service ของ nia_sale_back
-        # ... proxy_set_header อื่นๆ ...
+        proxy_pass http://backend:50;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
